# itml

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
itml/: __init__.py  itml.py  utils.py
tests/: test_itml.py  test_utils.py
tests/files/: sample01.itml  sample02.itml  sample03.itml  test.itml
