[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "itml"
version = "2.0.0"
description = "File format which makes internationalize texts easy."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Justus Röderer", email = "mail@dateiexplorer.de" }]
dependencies = [
    "Jinja2 ~= 3.1.2",
]